--- a/content/data/bank-statement-analyser/quickstart.mdx
+++ b/content/data/bank-statement-analyser/quickstart.mdx
@@ -7,10 +7,10 @@ visible_in_sidebar: true
 
 ## Quickstart Guide
 
-Here is a quick summary of steps to help you integrate with Setu’s BSA. Before you start, there are some key terms that will be referred to periodically in the documentation—
+Here is a quick summary of steps to help you integrate with Setu’s Insights API. Before you start, there are some key terms that will be referred to periodically in the documentation—
 
--   **FI Datablock**— FI Datablocks is the data received from the FIP (Financial Information Provider), via the AA. Currently, we only support bank statement data
--   **Report**— A report is the template in which the FIU wants the insights to be generated. An FIU can pick and choose exactly what modules should be added to a report based on their needs. For example, if an FIU only wants to get the income and expenses of a customer, the report can contain only those two modules
+-   **FI Datablock**— FI Datablocks is the data received from the FIP (Financial Information Provider), via the AA. Currently, we only support bank statement data.
+-   **Report**— A report is the template in which the FIU wants the insights to be generated. An FIU can pick and choose exactly what modules should be added to a report based on their needs. For example, if an FIU only wants to get the income and expenses of a customer, the report can contain only those two modules.
 
 <hr className="primary" />
 
@@ -30,9 +30,9 @@ Setu will create a report for the FIU and share a `Report ID`, which can be used
 
 #### Create FI-Datablocks
 
-Create an FI Datablock in Setu BSA by making a POST call to `/v1/fi_data` with the data fetched from the FIP
+Create an FI Datablock in Setu's Insights module by making a POST call to `/v1/fi_data` with the data fetched from the FIP
 
--   The payload should be the same data fetched from the FIP, and its schema is validated against the [ReBIT schema](https://api.rebit.org.in/schema)
+-   The payload should be the same data fetched from the FIP. The schema of this data is validated against the [ReBIT schema](https://api.rebit.org.in/schema)
 -   The API returns a `Data ID` for the datablock along with some metadata, which can be used when [generating insights](#step-3-generate-insights)
 -   A list of available data blocks can also be obtained by making a GET call to `/v1/fi_data`
 
@@ -43,14 +43,14 @@ Create an FI Datablock in Setu BSA by making a POST call to `/v1/fi_data` with t
 ### Step 3 - Generate Insights
 
 -   Generate Insights by making an API call to `/v1/insight`, with the report ID, and a list of data IDs in the payload
--   The API will post a asynchronous job and return a Job ID, which can later be used to obtain the insights
--   Setu will post a <a href="/data/account-aggregator/api-integration/notifications" target="_blank">notification</a> to the **notification endpoint** <a href="/data/account-aggregator/quickstart#integrating-fiu-apis-on-sandbox" target="_blank">configured for the FIU app</a>, along with the generation insights
+-   The API will post an asynchronous job and return a Job ID, which can later be used to obtain the insights generated
+-   Setu will post a <a href="/data/account-aggregator/api-integration/notifications" target="_blank">notification</a> to the **notification endpoint** <a href="/data/account-aggregator/quickstart#integrating-fiu-apis-on-sandbox" target="_blank">configured for the FIU app</a>, along with the generated insights
 
 <hr className="primary" />
 
 ## Test on Postman or integrate APIs
 
-If you are just starting integration, we recommend that you familiarise yourself with setting up Postman and configuring **credentials**. If you have already finished this, you can integrate with Insights APIs directly.
+If you are getting started with the integration, we recommend that you familiarise yourself with setting up Postman and configuring **credentials**. If you have already completed this step, you can integrate with the Setu Insights APIs directly.
 
 <Row>
     <Portion desktopSpan="half">
