--- a/content/data/bank-statement-analyser/overview.mdx
+++ b/content/data/bank-statement-analyser/overview.mdx
@@ -30,7 +30,7 @@ The analyser modules use statements uploaded via the Account Aggregator flow. Th
 
 ![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-1/setu-bsa-how-it-works-1.png)
 
-First, the FIP sends the bank statement data to the FIU via the AA gateway. But before this raw data goes to the FIU, it is routed via the Setu Bank Statement Analyser layer.
+First, customer gives consent to the FIU to access bank details from the FIP. The FIP then sends the bank statement data to the FIU via the AA gateway. But before this raw data goes to the FIU, it is routed via the Setu Bank Statement Analyser layer.
 
 Here, the raw data goes through a categorization model built by Setu, and gets bucketed into various categories of incomes, expenses etc.
 
