--- a/content/data/bank-statement-analyser/postman.mdx
+++ b/content/data/bank-statement-analyser/postman.mdx
@@ -22,8 +22,8 @@ Download and setup the <a href="https://www.postman.com/downloads" target="_blan
 
 Postman environment comes wth default test credentials. Set the following variables in the environment on Postman—
 
--   Set `client_id` to the FIU app client ID received on Bridge.
--   Set `client_secret` to the FIU app client secret received on Bridge.
+-   Set `client_id` to the FIU app client ID received from our support team.
+-   Set `client_secret` to the FIU app client secret received from our support team.
 
 ![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-variables-1/setu-bsa-variables-1.png)
 
