--- a/content/data/bank-statement-analyser/overview.mdx
+++ b/content/data/bank-statement-analyser/overview.mdx
@@ -28,13 +28,13 @@ The analyser modules use statements uploaded via the Account Aggregator flow. Th
 
 ### How does it work?
 
-![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-1/setu-bsa-how-it-works-1.png)
+![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-2/setu-bsa-how-it-works-2.png)
 
-First, customer gives consent to the FIU to access bank details from the FIP. The FIP then sends the bank statement data to the FIU via the AA gateway. But before this raw data goes to the FIU, it is routed via the Setu Bank Statement Analyser layer.
+-   Importing the bank statements: First, customer gives consent to the FIU to access bank details from the FIP. The FIP then sends the bank statement data to the FIU via the AA gateway. But before this raw data goes to the FIU, it is routed via the Setu Bank Statement Analyser layer.
 
-Here, the raw data goes through a categorization model built by Setu, and gets bucketed into various categories of incomes, expenses etc.
+-   Analyzing financial data: Here, the raw data goes through a categorization model built by Setu, and gets bucketed into various categories of incomes, expenses etc.
 
-Once the categorization is done, the insights are sent back to the FIU in the output the FIU chooses (JSON, XLS, etc.)
+-   Generating reports: Once the analysis is done, the insights are sent back to you in the output the you chooses (JSON, XLS, etc.)
 
 <NextPage
     info={{
