--- a/content/data/bank-statement-analyser/overview.mdx
+++ b/content/data/bank-statement-analyser/overview.mdx
@@ -26,10 +26,21 @@ The analyser modules use statements uploaded via the Account Aggregator flow. Th
 
 4. 50+ indicators for all round financial health: Income analysis, expenditure analysis and categorization engines that allow to create a complete picture of an individual’s financial health
 
+### How does it work?
+
+![](https://storage.googleapis.com/strapi-assets/latest/setu-bsa-how-it-works-2/setu-bsa-how-it-works-2.png)
+
+-   Importing the bank statements: First, customer gives consent to the FIU to access bank details from the FIP. The FIP then sends the bank statement data to the FIU via the AA gateway. But before this raw data goes to the FIU, it is routed via the Setu Bank Statement Analyser layer.
+
+-   Analyzing financial data: Here, the raw data goes through a categorization model built by Setu, and gets bucketed into various categories of incomes, expenses etc.
+
+-   Generating reports: Once the analysis is done, the insights are sent back to you in the output the you chooses (JSON, XLS, etc.)
+
 <NextPage
     info={{
-        description: "API reference of Bank Statement Analyser",
-        slug: "/data/bank-statement-analyser/api-reference",
-        title: "API reference",
+        title: "Quickstart",
+        description:
+            "Get started with Setu BSA integration with Quickstart Guide",
+        slug: "/data/bank-statement-analyser/quickstart",
     }}
 />
