--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -93,7 +93,7 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
             tabs={[
                 {
                     key: "1",
-                    label: <Badge type="success">Success</Badge>,
+                    label: <Badge type="success">SUCCESS</Badge>,
                     content: (
                         <>
                             <h5>Response</h5>
@@ -165,7 +165,7 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
                 },
                 {
                     key: "2",
-                    label: <Badge type="failure">Fail</Badge>,
+                    label: <Badge type="failure">FAIL</Badge>,
                     content: (
                         <>
                             <h5>Response</h5>
@@ -274,7 +274,7 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
             tabs={[
                 {
                     key: "1",
-                    label: <Badge type="success">Success</Badge>,
+                    label: <Badge type="success">SUCCESS</Badge>,
                     content: (
                         <>
                             
@@ -347,7 +347,7 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
                 },
                 {
                     key: "2",
-                    label: <Badge type="failure">Fail</Badge>,
+                    label: <Badge type="failure">FAIL</Badge>,
                     content: (
                         <>
                             
