--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -49,7 +49,7 @@ Specify the format in which you wish to receive the decrypted financial data, th
             tabs={[
                 {
                     key: "1",
-                    label: <Badge type="success">Success</Badge>,
+                    label: <Badge type="success">SUCCESS</Badge>,
                     content: (
                         <>
                             
@@ -74,7 +74,7 @@ Specify the format in which you wish to receive the decrypted financial data, th
                 },
                 {
                     key: "2",
-                    label: <Badge type="failure">Fail</Badge>,
+                    label: <Badge type="failure">FAIL</Badge>,
                     content: (
                         <>
                             
@@ -163,7 +163,7 @@ If you request for multiple FI types, you will receive all the FI data from end-
             tabs={[
                 {
                     key: "1",
-                    label: <Badge type="success">Success</Badge>,
+                    label: <Badge type="success">SUCCESS</Badge>,
                     content: (
                         <>
                             
@@ -252,7 +252,7 @@ The payload contains Profile, Summary and Transactions as requested in Create co
                 },
                 {
                     key: "2",
-                    label: <Badge type="failure">Fail</Badge>,
+                    label: <Badge type="failure">FAIL</Badge>,
                     content: (
                         <>
                             
