corrected error code

--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -116,7 +116,7 @@ Specify the format in which you wish to receive the decrypted financial data, th
   </tr>
   <tr>
     <td>400</td>
-    <td><code>Invalid request</code></td>
+    <td><code>InvalidRequest</code></td>
     <td>
       <ul>
         <li>Invalid request body</li>
@@ -294,7 +294,7 @@ The payload contains Profile, Summary and Transactions as requested in Create co
   </tr>
   <tr>
     <td>400</td>
-    <td><code>Invalid request</code></td>
+    <td><code>InvalidRequest</code></td>
     <td>
       <ul>
         <li>Invalid request body</li>
