--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -196,7 +196,7 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
   </tr>
   <tr>
     <td>400</td>
-    <td><code>Invalid request</code></td>
+    <td><code>InvalidRequest</code></td>
     <td>
       <ul>
         <li>Invalid request body</li>
@@ -389,7 +389,7 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
   </tr>
   <tr>
     <td>400</td>
-    <td><code>Invalid request</code></td>
+    <td><code>InvalidRequest</code></td>
     <td>
       <ul>
         <li>Consent has expired</li>
