updated flexi sign docs with new api changes

--- a/content/data/esign/flexi-esign.mdx
+++ b/content/data/esign/flexi-esign.mdx
@@ -197,10 +197,39 @@ The signing config is a JSON that specifies on which pages and at what coordinat
                             </p>
                             <h5>Request</h5>
                             <CodeBlockWithCopy language="json">
-                                {`POST /api/signature/config
-{ "signers": [ { "optional": false, "signRectangles": [ { "coordinate": { "lowerLeftX": 402, "lowerLeftY": 53, "upperRightX": 542, "upperRightY": 93 }, "pages": [ 0, 1 ] },
-{ "coordinate": { "lowerLeftX": 358, "lowerLeftY": 232, "upperRightX": 498.53009106595096, "upperRightY": 272.52901734104046 }, "pages": [ 2 ] } ] }, 
-{ "optional": false, "signRectangles": [ { "coordinate": { "lowerLeftX": 358, "lowerLeftY": 232, "upperRightX": 498.53009106595096, "upperRightY": 272.52901734104046 }, "pages": [ 0, 1 ] } ] } ] }`}
+                            {`POST /api/signature/config
+
+                              {
+                                "signers": [
+                                  {
+                                    "optional": false,
+                                    "signRectangles": [
+                                      {
+                                        "coordinate": {
+                                          "lowerLeftX": 402,
+                                          "lowerLeftY": 53,
+                                          "upperRightX": 542,
+                                          "upperRightY": 93
+                                        },
+                                        "pages": [
+                                          0,
+                                          1
+                                        ]
+                                      },
+                                      {
+                                        "coordinate": {
+                                          "lowerLeftX": 358,
+                                          "lowerLeftY": 232,
+                                          "upperRightX": 498.53009106595096,
+                                          "upperRightY": 272.52901734104046
+                                        },
+                                      "pages": [
+                                          2
+                                        ]
+                                      }
+                                    ]
+                                }]
+                              } `}
                             </CodeBlockWithCopy>
                             <hr className="tertiary" />
                             <h5>Response</h5>
