update heading size

--- a/content/data/account-aggregator/api-integration/fip-apis.mdx
+++ b/content/data/account-aggregator/api-integration/fip-apis.mdx
@@ -13,7 +13,7 @@ The GET  Active FIP List  API is the new version of our API to call the list of 
 -   Can be used by FIUs as a mode of selection of FIPs/providers where a user has an account. 
 
 
-###### Details Shared in the FIP List API
+#### Details Shared in the FIP List API
 
 Below is the parameters shared in the FIP List API that gives you each of the relevant details of the FIPs.
 These key details can be used by you for purposes like - offering a list of FIPs for your end-users to select or routing users to the Setu AA flow based on whether an FIP is active or not. 
