--- a/content/data/bank-statement-analyser/overview.mdx
+++ b/content/data/bank-statement-analyser/overview.mdx
@@ -1,30 +1,30 @@
 ---
 sidebar_title: Overview
-page_title: BSA Overview
+page_title: Setu Insights Overview
 order: 0
 visible_in_sidebar: true
 ---
 
-## What is Setu's Bank Statement Analyser?
+## What is Setu Insights?
 
-Setu’s bank statement analyser gives you actionable insights from a customer's bank statement about their income, expenditure and financial history.
+Setu’s Insight API gives you actionable insights from a customer's bank statement about their income, expenditure and financial history.
 
-The analyser modules use statements uploaded via the Account Aggregator flow. These insights can be tailor made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
+The Setu Insights API makes use of bank statements uploaded via the Account Aggregator flow. The insights generated can be tailor made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
 
 ### Features and Module
 
-1. Flexible delivery and format: Analysis outputs in XML, JSON, XLS, all as per your team's
+1. **Flexible delivery and format:** Analysis outputs in XML, JSON, XLS, all as per your team's
    needs and preferred mode. Setu will also allow for a dashboard for your team to view all
-   analyses online (Coming soon)
+   analyses online (Coming soon).
 
-2. Multiple data sources: Stitch together insights from varied sources of financial accounts.
+2. **Multiple data sources:** Stitch together insights from varied sources of financial accounts.
    GST analysis, ITR analysis, Insurance analysis as and when these data types are made
-   available in the market. Move beyond simplistic bank statement analyses (Coming Soon)
+   available in the market. Move beyond simplistic bank statement analyses (Coming Soon).
 
-3. Simple APIs & exquisite documentation: Seamless integration of the AA consent flow
-   and BSA.
+3. **Simple APIs & exhaustive documentation:** Get detailed documentation for a seamless integration of Setu's AA consent flow as well as Setu Insights.
 
-4. 50+ indicators for all round financial health: Income analysis, expenditure analysis and categorization engines that allow to create a complete picture of an individual’s financial health
+
+4. **50+ indicators for all round financial health:** Income analysis, expenditure analysis and categorization engines that allow to create a complete picture of an individual’s financial health.
 
 ### How does it work?
 
