--- a/content/data/bank-statement-analyser/postman.mdx
+++ b/content/data/bank-statement-analyser/postman.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Postman integration
-page_title: BSA Postman integration
+page_title: Setu Insights Postman integration
 order: 2
 visible_in_sidebar: true
 ---
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 #### Download and set up Postman
 
-Download and setup the <a href="https://www.postman.com/downloads" target="_blank">Postman App</a>, if you haven’t already. All APIs required for using BSA have been published in this <a href="https://documenter.getpostman.com/view/15939114/2s93Jrw4mm" target="_blank">collection</a>. Click on **Run in Postman** button on the top right corner to import BSA’s API collection to Postman.
+Download and setup the <a href="https://www.postman.com/downloads" target="_blank">Postman App</a>, if you haven’t already. All APIs required for using Setu Insights have been published in this <a href="https://documenter.getpostman.com/view/15939114/2s93Jrw4mm" target="_blank">collection</a>. Click on **Run in Postman** button on the top right corner to import Setu Insight's API collection to Postman.
 
 **Update environment variables**
 
