--- a/content/data/bank-statement-analyser/quickstart.mdx
+++ b/content/data/bank-statement-analyser/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Quickstart
-page_title: BSA quickstart
+page_title: Setu Insights quickstart
 order: 1
 visible_in_sidebar: true
 ---
