add error notification section

--- a/content/data/account-aggregator/api-integration/fip-apis.mdx
+++ b/content/data/account-aggregator/api-integration/fip-apis.mdx
@@ -155,7 +155,7 @@ Below is the list of statuses for FIPs that you will see in a typical GET FIP Li
     </Portion>
 </Row>
 
-## Using Get FIP List for routing end-users to and AA Flows
+## Using Get FIP List for routing end-users to AA Flows
 
 FIUs can use the FIP List API to route their end users to the AA flow or non-AA flows (Like PDF uploads, net banking integrations or alternative data collection modes)if the FIP is temporarily deactivated if the provider is not part of the list of active FIPs. 
 How can you as an FIU route your users and select FIPs (providers where your end-user had accounts) ? We offer two modes of account discovery.
